tests/__snapshots__/validation-expect-handles-not-supported-matcher-stderr.snap.txt
Error: The '.toBeSupported()' matcher is not supported.

   8 | test("is not supported?", () => {
   9 |   // @ts-expect-error
  10 |   expect<string>().type.toBeSupported();
     |                         ~~~~~~~~~~~~~
  11 |   // @ts-expect-error
  12 |   expect<number>().type.not.toBeSupported();
  13 | });

       at ./__typetests__/matcher-not-supported.tst.ts:10:25

Error: The '.toBeSupported()' matcher is not supported.

  10 |   expect<string>().type.toBeSupported();
  11 |   // @ts-expect-error
  12 |   expect<number>().type.not.toBeSupported();
     |                             ~~~~~~~~~~~~~
  13 | });
  14 | 

       at ./__typetests__/matcher-not-supported.tst.ts:12:29

